--- a/Modulo HTML/index.html
+++ b/Modulo HTML/index.html
@@ -7,5 +7,14 @@
 </head>
 <body>
   <h2>Formulario de Cadastro</h2>
+  <form>
+    <label for="nome">Nome</label>
+    <input type="text" id="name" name="nome" required><br>
+    <label for="email">Email</label>
+    <input type="email" id="email" name="email" required><br>
+    <label for="senha">Senha</label>
+    <input type="password" id="password" name="password" required><br>
+    <button>Cadastrar</button>
+  </form>
 </body>
 </html>
