--- a/Exercicio HTML/index.html
+++ b/Exercicio HTML/index.html
@@ -27,7 +27,7 @@
         <h2>Esportes</h2>
         
         <article>
-            <img src="./imagens/Futebol.jpeg" alt="Bola de futebol no gramado" />
+            <img src="./imagens/Futebol.jpeg" alt="Bola de futebol" />
             <header>
                 <time>13/07/2022 às 12:35</time>
             </header>
