--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Game Shop - A Sua Loja de Games</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bungee&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
@@ -13,14 +16,83 @@
       <nav>
         <ul>
           <li>
-            <a href="#">Sobre a Loja</a>
+            <a href="#about">Sobre a Loja</a>
           </li>
           <li>
-            <a href="#">Contato</a>
+            <a href="#contact">Contato</a>
           </li>
         </ul>
       </nav>
     </div>
   </header>
+  <section id="about">
+    <div class="container">
+      <img class="store-front" src="./Loja Games.jpg" alt="Loja de Games">
+      <div>
+        <h2>Sobre a Loja</h2>
+        <p>
+          Bem-vindo à Games Shop, o lugar perfeito para os apaixonados por videogames! Aqui você encontra os lançamentos mais esperados, clássicos atemporais e acessórios de alta performance para elevar sua experiência gamer.
+        </p>
+        <p>
+          Nossa missão é oferecer produtos de qualidade e suporte especializado para todos os tipos de jogadores, do casual ao hardcore. Explore nosso catálogo e prepare-se para viver momentos épicos em cada partida!
+        </p>
+        <ul class="brands-list">
+          <li><img src="./Nintendo.png" alt="Logo Nintendo"></li>
+          <li><img src="./Xbox.jpg" alt="Logo Xbox"></li>
+          <li><img src="./Playstation.jpg" alt="Logo Playstation"></li>
+        </ul>
+      </div>
+    </div>
+    </section>
+    <section id="contact">
+      <div class="container">
+        <h2>Contato</h2>
+        <div class="contact-methods">
+          <div>
+            <h3>Fale Conosco</h3>
+            <form>
+              <input type="text" placeholder="Seu Nome" required />
+              <input type="email" placeholder="Seu email" required />
+              <input type="tel" placeholder="Seu telefone (opcional)" />
+              <textarea placeholder="Sua Mensagem" required></textarea>
+              <button type="submit">Enviar</button>
+            </form>
+          </div>
+          <div>
+            <h3>Nos acompanhe</h3>
+            <ul class="social-links">
+              <li>
+                <a href="#" title="Siga-nos no instagram">
+                  <img src="./logo instagram.png" alt="Logo instagram">
+                </a>
+                <li>
+                  <a href="#" title="Siga-nos no Facebook">
+                    <img src="./Logo facebook.jpg" alt="Logo facebook">
+                  </a>
+                  <li>
+                    <a href="#" title="Siga-nos no Youtubr">
+                      <img src="./Logo Youtube.png" alt="Logo Youtube">
+                    </a>
+                  </li>
+                </li>
+              </li>
+            </ul>
+          </div>
+          <div>
+            <h3>Venha até nós</h3>
+            <p>
+              Rua JavaScript n 124, Vila html -São Paulo - SP
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <div class="conatiner">
+        <p>
+          &copy; Games Shop - Todos os direitos reservados - 2024
+        </p>
+      </div>
+    </footer>
 </body>
 </html>
