--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <body>
   <header>
     <div class="container">
-      <h1>Games Shop</h1>
+      <h1>Rockstar Games</h1>
       <nav>
         <ul>
           <li>
-            <a href="#about">Sobre a Loja</a>
+            <a href="#about">Sobre o Jogo</a>
           </li>
           <li>
             <a href="#contact">Contato</a>
@@ -27,17 +27,16 @@
   </header>
   <section id="about">
     <div class="container">
-      <img class="store-front" src="./Loja Games.jpg" alt="Loja de Games">
+      <img class="store-front" src="./Red Dead.jpg" alt="Jogo Read Dead">
       <div>
-        <h2>Sobre a Loja</h2>
+        <h2>Sobre o Jogo</h2>
         <p>
-          Bem-vindo à Games Shop, o lugar perfeito para os apaixonados por videogames! Aqui você encontra os lançamentos mais esperados, clássicos atemporais e acessórios de alta performance para elevar sua experiência gamer.
+          Red Dead Redemption 2 é um jogo de ação e aventura ambientado no Velho Oeste, desenvolvido pela Rockstar Games. Lançado em 2018, o jogo rapidamente se tornou um sucesso por sua jogabilidade imersiva, narrativa profunda e gráficos impressionantes. Ele se passa em 1899, nos últimos dias da era dos fora-da-lei, e segue a história de Arthur Morgan, um membro da gangue Van der Linde, enquanto ele lida com a vida em fuga, lealdades divididas e as pressões crescentes da civilização que avança.
         </p>
         <p>
-          Nossa missão é oferecer produtos de qualidade e suporte especializado para todos os tipos de jogadores, do casual ao hardcore. Explore nosso catálogo e prepare-se para viver momentos épicos em cada partida!
+          O mundo aberto de Red Dead Redemption 2 é vasto e incrivelmente detalhado, permitindo que os jogadores explorem montanhas, florestas, pântanos e cidades movimentadas.
         </p>
         <ul class="brands-list">
-          <li><img src="./Nintendo.png" alt="Logo Nintendo"></li>
           <li><img src="./Xbox.jpg" alt="Logo Xbox"></li>
           <li><img src="./Playstation.jpg" alt="Logo Playstation"></li>
         </ul>
